Corrección de notebook PEC 1

--- a/ROSALES_WILLIAM_PEC_1.ipynb
+++ b/ROSALES_WILLIAM_PEC_1.ipynb
@@ -3,59 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/datawilly/procesamiento-de-datos/blob/main/ROSALES_WILLIAM_PEC_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Gy0Fzz0NlyOY"
-      },
-      "source": [
-        "<a name = \"inicio\"></a>\n",
-        "![image-2.png](attachment:image-2.png)\n",
-        "<p style=\"text-align:center;font-size:30px;font-weight: bold;\">PRUEBA DE EVALUACIÓN CONTINUA</p>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "D-1BwdWOlyOb"
-      },
-      "source": [
-        "# Objetivos\n",
-        "\n",
-        "El objetivo de esta PEC es evaluar el conocimiento del alumno en el uso de las librerías de Python **NumPy**, **pandas**, **matplotlib** y **Seaborn**, aplicándolas en la visualización y transformación de conjuntos de datos.\n",
-        "\n",
-        "La prueba consta de tres bloques de preguntas correspondientes a tres niveles de dificultad:\n",
-        "\n",
-        "* **Nivel básico**, en las que el alumno deberá ser capaz de realizar tareas, ejercicios o prácticas similares a las aprendidas en la documentación del módulo.\n",
-        "* **Nivel intermedio**, en las que el alumno deberá ser capaz de aplicar las técnicas, conocimientos y habilidades revisadas en la documentación a problemas con elementos diferentes.\n",
-        "* **Nivel avanzado**, en las que el alumno deberá ser capaz de amplicar las técnicas, conocimientos y habilidades aprendidas investigando nuevos aspectos, problemas o elementos."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3IczLXjflyOb"
-      },
-      "source": [
-        "# Importante\n",
-        "\n",
-        "* El alumno deberá completar este cuaderno sin modificar las preguntas ni modificar la estructura del propio cuaderno (se pueden añadir celdas, pero no modificar ni eliminar las existentes)\n",
-        "* El entregable será el cuaderno Jupyter (no ficheros planos con código python, ni PDF's ni material en ningún otro soporte)\n",
-        "* El cuaderno Jupyter con las respuestas deberá poder ser reejecutado sin que se produzca ningún error\n",
-        "* Salvo que se pida lo contrario, no se cargará ningún fichero desde el equipo local. Si se pide cargar una imagen y se indica la url de la que descargarla, esto podrá hacerse copiando la url, pegándola en la barra de direcciones de un navegador, haciendo clic con el botón secundario del ratón en la imagen y seleccionando la opción que la descargue (esta opción dependerá del navegador que se esté usando). En este caso la imagen deberá descargarse en la misma carpeta en la que esté este cuaderno Jupyter.\n",
-        "* Salvo que se especifique otra cosa, deberán utilizarse siempre las herramientas proveídas por las librerías NumPy, Pandas, Seaborn o Matplotlib. No puede recurrirse a otras librerías.\n",
-        "* Salvo que se indique lo contrario, en cada ejercicio deberán cargarse los datos necesarios aun cuando hayan sido cargados en ejercicios anteriores (es decir, si el ejercicio hace referencia al DataFrame Tips de Seaborn, salvo que se especifique otra cosa lo primero que deberá hacerse es cargar dicho DataFrame, aun cuando haya sido cargado ya en un ejercicio anterior).\n",
-        "\n",
-        "El incumplimiento de cualquiera de estas normal supondrá la invalidación del ejercicio o del apartado correspondiente.\n",
-        "\n",
-        "Todos los ejercicios tienen el mismo valor (un punto) salvo el del nivel avanzado, que tiene dos puntos."
       ]
     },
     {
@@ -99,20 +51,8 @@
         "id": "8pGc8kVYlyOg"
       },
       "source": [
-        "# NIVEL BÁSICO: 5 puntos\n",
+        "# NIVEL BÁSICO\n",
         "<div style = \"float:right\"><a style=\"text-decoration:none\" href = \"#inicio\">Inicio</a></div>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "LzOmMhF6lyOg"
-      },
-      "source": [
-        "### Ejercicio 1\n",
-        "<div style=\"background:#5D6D7E;padding:20px;color:#ffffff;margin-top:10px;\">\n",
-        "Crea dos arrays unidimensionales de 5 valores aleatorios enteros entre 0 y 10 (ambos valores incluidos). Crea un nuevo array que concatene los dos arrays anteriores verticalmente para formar un array de 5 filas y dos columnas y asigna el resultado a la varible <strong>a</strong>.\n",
-        "</div>"
       ]
     },
     {
@@ -159,17 +99,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "KhsGM6ZVlyOk"
-      },
-      "source": [
-        "<div style=\"background:#D8D8D8;padding:20px;color:#000000;margin-top:10px;\">\n",
-        "Prueba ahora tu solución ejecutando la siguiente celda:\n",
-        "</div>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -195,18 +124,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cBMEskSYlyOl"
-      },
-      "source": [
-        "### Ejercicio 2\n",
-        "<div style=\"background:#5D6D7E;padding:20px;color:#ffffff;margin-top:10px;\">\n",
-        "Crea un array de dimensiones 5x10 formado por valores aleatorios enteros entre 0 y 10 (ambos valores incluidos) y cárgalo en la variable data. Sin usar bucles, sustituye los valores menores a 5 por 0.\n",
-        "</div>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "EPFRRs8wlyOl"
       },
       "source": [
@@ -225,17 +142,6 @@
       "source": [
         "data = np.random.randint(0,11,[5,10]) #Generamos un array esta vez indicandole las filas y las columnas entre []\n",
         "data = np.where(data < 5, 0 , data ) #Usamos el metodo where para hacer los reemplazos"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fKIYfEZLlyOm"
-      },
-      "source": [
-        "<div style=\"background:#D8D8D8;padding:20px;color:#000000;margin-top:10px;\">\n",
-        "Prueba ahora tu solución ejecutando la siguiente celda (el array no deberá incluir valores menores a 5 salvo los ceros):\n",
-        "</div>"
       ]
     },
     {
@@ -268,19 +174,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_u2-S-MRlyOn"
-      },
-      "source": [
-        "### Ejercicio 3\n",
-        "<div style=\"background:#5D6D7E;padding:20px;color:#ffffff;margin-top:10px;\">\n",
-        "A partir del DataFrame Tips de la librería Seaborn extrae los valores de la cuarta y segunda filas en este orden (es decir, las filas con índice 3 y 1), y las columnas \"sex\", \"size\" y \"tip\" (también en este orden). Asigna el resultado a la variable <strong>sample</strong>.<br>\n",
-        "Para obtener la máxima nota, la selección deberá realizarse en un único paso.\n",
-        "</div>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Jr8-7u0ilyOn"
       },
       "source": [
@@ -297,17 +190,6 @@
       "outputs": [],
       "source": [
         "sample = sns.load_dataset(\"tips\").loc[[3,1],[\"sex\", \"size\", \"tip\"]]"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "6_PolttDlyOo"
-      },
-      "source": [
-        "<div style=\"background:#D8D8D8;padding:20px;color:#000000;margin-top:10px;\">\n",
-        "Prueba ahora tu solución ejecutando la siguiente celda:\n",
-        "</div>"
       ]
     },
     {
@@ -379,18 +261,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZQu1pifPlyOp"
-      },
-      "source": [
-        "### Ejercicio 4\n",
-        "<div style=\"background:#5D6D7E;padding:20px;color:#ffffff;margin-top:10px;\">\n",
-        "    Carga en la variable <strong>tips</strong> el DataFrame tips proveído por la librería Seaborn. Crea una nueva columna (\"total\") que sume el valor de la columna \"total_bill\" y el de la columna \"tips\". Suponiendo que quien haya pagado cada comida ha pagado la cantidad indicada en la columna recién creada ¿cuántos clientes han desembolsado 40 o más dólares en total?\n",
-        "</div>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "MXtQpfAOlyOp"
       },
       "source": [
@@ -406,9 +276,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": true,
         "id": "4spuyqMWlyOp",
-        "outputId": "e1c742a3-24e0-487d-93f7-6dad7d25ff40"
+        "outputId": "e1c742a3-24e0-487d-93f7-6dad7d25ff40",
+        "scrolled": true
       },
       "outputs": [
         {
@@ -717,18 +587,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aJoQeui5lyOq"
-      },
-      "source": [
-        "### Ejercicio 5\n",
-        "<div style=\"background:#5D6D7E;padding:20px;color:#ffffff;margin-top:10px;\">\n",
-        "Escribe una función (llámala \"nulls_number\") que reciba como argumento un DataFrame Pandas y devuelva el número de valores nulos que contenga en total (es decir, entre todas las columnas).\n",
-        "</div>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "ActgAP8GlyOr"
       },
       "source": [
@@ -750,23 +608,12 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pYr52EymlyOs"
-      },
-      "source": [
-        "<div style=\"background:#D8D8D8;padding:20px;color:#000000;margin-top:10px;\">\n",
-        "Prueba ahora tu solución ejecutando la siguiente celda:\n",
-        "</div"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": true,
         "id": "w5jFsOtKlyOs",
-        "outputId": "72db3613-e82d-47af-9cfa-6da18d5cc609"
+        "outputId": "72db3613-e82d-47af-9cfa-6da18d5cc609",
+        "scrolled": true
       },
       "outputs": [
         {
@@ -791,20 +638,8 @@
         "id": "FWKF5_SalyOs"
       },
       "source": [
-        "# NIVEL INTERMEDIO: 3 puntos\n",
+        "# NIVEL INTERMEDIO\n",
         "<div style = \"float:right\"><a style=\"text-decoration:none\" href = \"#inicio\">Inicio</a></div>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "QKyJ4M5ylyOt"
-      },
-      "source": [
-        "### Ejercicio 1\n",
-        "<div style=\"background:#5D6D7E;padding:20px;color:#ffffff;margin-top:10px;\">\n",
-        "A partir del DataFrame Titanic descargado de la librería Seaborn y creando una tabla dinámica a partir de él, responde a la siguiente pregunta: ¿En qué puerto los hombres y las mujeres de alguna clase (primera, segunda o tercera) pagaron en media exactamente lo mismo por su pasaje?\n",
-        "</div>"
       ]
     },
     {
@@ -940,18 +775,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EkFuDBOnlyOu"
-      },
-      "source": [
-        "### Ejercicio 2\n",
-        "<div style=\"background:#5D6D7E;padding:20px;color:#ffffff;margin-top:10px;\">\n",
-        "Lee el DataFrame Titanic proveído por la librería Seaborn y carga en la variable <strong>number</strong> el resultado de calcular el número de mujeres mayores de 38 años que hayan pagado más de 30 y menos de 40 libras.\n",
-        "</div>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "FbVYERlQlyOu"
       },
       "source": [
@@ -987,17 +810,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TxW9Gkb-lyOv"
-      },
-      "source": [
-        "<div style=\"background:#D8D8D8;padding:20px;color:#000000;margin-top:10px;\">\n",
-        "Prueba ahora tu solución ejecutando la siguiente celda:\n",
-        "</div>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1015,18 +827,6 @@
       ],
       "source": [
         "print(\"Hay {} mujeres mayores de 38 años que pagaron más de 30 y menos de 40 libras\".format(number))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "YyiinmfPlyOv"
-      },
-      "source": [
-        "### Ejercicio 3\n",
-        "<div style=\"background:#5D6D7E;padding:20px;color:#ffffff;margin-top:10px;\">\n",
-        "Escribe una función (llámala \"fill_nulls\") que reciba como argumento un dataframe Pandas y devuelva una copia del DataFrame tras sustituir los valores nulos de cada columna por el valor más frecuente en la columna sin usar bucles for o while.\n",
-        "</div>"
       ]
     },
     {
@@ -1437,17 +1237,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "BXdcJMTblyOy"
-      },
-      "source": [
-        "<div style=\"background:#D8D8D8;padding:20px;color:#000000;margin-top:10px;\">\n",
-        "Prueba ahora tu solución ejecutando la siguiente celda:\n",
-        "</div>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1479,20 +1268,8 @@
         "id": "Rf1WbM4glyOz"
       },
       "source": [
-        "# NIVEL AVANZADO: 2 puntos\n",
+        "# NIVEL AVANZADO\n",
         "<div style = \"float:right\"><a style=\"text-decoration:none\" href = \"#inicio\">Inicio</a></div>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "o8aEim3klyOz"
-      },
-      "source": [
-        "### Ejercicio 1\n",
-        "<div style=\"background:#5D6D7E;padding:20px;color:#ffffff;margin-top:10px;\">\n",
-        "    Carga en la variable <strong>titanic</strong> el DataFrame titanic proveído por la librería Seaborn, y utilizando el método groupby, calcula la edad media de los pasajeros según el puerto de embarque. Almacena el resultado en la variable \"mean_age\". Asegúrate de que en tu resultado solo estás incluyendo la variable \"age\" (y los nombres de los puertos, por supuesto).\n",
-        "</div>"
       ]
     },
     {
@@ -1537,17 +1314,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4odLJjCKlyO1"
-      },
-      "source": [
-        "<div style=\"background:#D8D8D8;padding:20px;color:#000000;margin-top:10px;\">\n",
-        "Prueba ahora tu solución ejecutando la siguiente celda:\n",
-        "</div>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1565,17 +1331,6 @@
       ],
       "source": [
         "print(\"La edad media de los pasajeros de Queenstown fue de {} años\".format(mean_age[\"Queenstown\"]))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Gq8qKPh9lyO2"
-      },
-      "source": [
-        "<div style=\"background:#5D6D7E;padding:20px;color:#ffffff;margin-top:10px;\">\n",
-        "    A continuación, usando el método <i>fillna</i> <strong>una sola vez</strong>, sustituye (inplace) los valores nulos del campo \"age\" del DataFrame <strong>titanic</strong> por los valores obtenidos en el apartado anterior (es decir, sustituye en el DataFrame <strong>titanic</strong> cada edad nula por el valor medio de la edad de los pasajeros que hayan embarcado en el mismo puerto).\n",
-        "</div>"
       ]
     },
     {
@@ -1891,17 +1646,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "nyxJC54flyO3"
-      },
-      "source": [
-        "<div style=\"background:#D8D8D8;padding:20px;color:#000000;margin-top:10px;\">\n",
-        "Prueba ahora tu solución ejecutando la siguiente celda:\n",
-        "</div>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1924,18 +1668,13 @@
         "print(titanic.iloc[5, 3])\n",
         "print(titanic.iloc[17, 3])"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "OSPXFUKalyO4"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -1952,10 +1691,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.12"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
